Fix crash on session loading

Amends 22da0f2fd660ebd916a140d1d3a64632bca7cc35.

Fixes: QTCREATORBUG-28700
Change-Id: I2d9c249fe03abfa1bc3ce53d0d7cff7b8a0329d6
Reviewed-by: Christian Stenger <christian.stenger@qt.io>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>