src/plugins/designer/resourcehandler.cpp
@@ -74,7 +74,7 @@ void ResourceHandler::updateResourcesHelper(bool updateProjectResources)
         m_form->setDirty(true);
 
     // Does the file belong to a project?
-    if (project) {
+    if (project && project->rootProjectNode()) {
         // Collect project resource files.
 
         // Find the (sub-)project the file belongs to. We don't want to find resources
